# equatable

./: .gitignore  .spi.yml  .swiftlint_refinement.yml  BUILD.bazel  MODULE.bazel  Package.resolved  Package.swift  README.md
Sources/Equatable/: Equatable.swift
Sources/EquatableClient/: main.swift
Sources/EquatableMacros/: Closure.swift  EquatableIgnoredMacro.swift  EquatableIgnoredUnsafeClosureMacro.swift  EquatableMacro.swift  SimpleFixItMessage.swift
Sources/EquatableMacros/Extensions/: IdentifierTypeSyntax+Extensions.swift  MemberTypeSyntax+Extensions.swift  TypeSyntax+Extensions.swift
Tests/: EquatableMacroTests.swift
